...
                isSelected = true
                self.onTap()
            } label: {
                Image(systemName: "hand.thumbsup.fill")
                    .font(.system(size: 14.0))
            }
            .accessibilityIdentifier("ThumbsUp")
            .symbolEffect(.bounce.up, value: isSelected)
        } else {
            Button {
                isSelected = true
                self.onTap()
            } label: {
...
